--- a/BelajarYok/View/AddFolder/AddToDoList.xaml
+++ b/BelajarYok/View/AddFolder/AddToDoList.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodel="clr-namespace:BelajarYok.ViewModel" x:DataType="viewmodel:AddToDoListViewModel"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodel="clr-namespace:BelajarYok.ViewModel" 
+             x:DataType="viewmodel:AddToDoListViewModel"
              x:Class="BelajarYok.View.AddFolder.AddToDoList"
              xmlns:Models="clr-namespace:BelajarYok.Model"
              xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
-             Background="purple">
+             Background="Black">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout BackgroundColor="Transparent" Spacing="10">
@@ -84,7 +86,7 @@
                                     <StackLayout Orientation="Horizontal"
                                                  Margin="20,0,0,0" >
                                         <Label Text="{Binding Text}"
-                                               TextColor="White"
+                                               TextColor="{Binding textColor}"
                                                FontSize="Medium"
                                                FontAttributes="Bold"
                                                Margin="23,0,0,2"
@@ -107,14 +109,14 @@
                                    FontSize="Large" FontAttributes="Bold"
                                    Margin="10,0,0,20"/>
                             <input:SelectionView SelectionType="Button"
-                                             ItemsSource="{Binding Colors}"
+                                             ItemsSource="{Binding Colors1}"
                                              SelectedItem="{Binding SelectedTextColor}"
                                              Color="#BCFE2F"
                                              BackgroundColor="#2b2c30"
                                              />
                         </StackLayout>
                         <Button Text="Save"
-                                BackgroundColor="LightGreen"
+                                BackgroundColor="#BCFE2F"
                                 TextColor="Black"
                                 FontAttributes="Bold"
                                 CornerRadius="20"
