--- a/BelajarYok/View/Register.xaml
+++ b/BelajarYok/View/Register.xaml
@@ -25,10 +25,10 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="20"/>
                 </Grid.ColumnDefinitions>
-                <!--<ImageButton Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" 
+                <ImageButton Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" 
                              Source="Back" 
                              Scale="0.7"
-                             BackgroundColor="Transparent"/>-->
+                             BackgroundColor="Transparent"/>
                 <Image Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Source="Branding" Scale="0.85"/>
                 <Label Grid.Row="2" Grid.Column="1" 
                        Grid.ColumnSpan="2" 
