--- a/BelajarYok/View/Friends.xaml
+++ b/BelajarYok/View/Friends.xaml
@@ -3,162 +3,92 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BelajarYok.View.Friends">
     <ContentPage.Content>
-        <ScrollView>
-            <StackLayout>
-                <StackLayout Orientation="Horizontal"
-                         Margin="20,15,20,15">
-                    <Image Source="more_horiz.png" 
-                           HorizontalOptions="Center"
-                           Margin="5,0,10,0"/>
-                    <Label Text="More"
+        <StackLayout>
+            <Frame BackgroundColor="Transparent"
+                   CornerRadius="5"
+                   Padding="10"
+                   HeightRequest="30"
+                   Margin="10,5,10,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Column="0" Source="group_add.png" HorizontalOptions="Start"/>
+                    <Label Grid.Column="1" 
+                           Text="Add Friends"
                            FontSize="20"
                            FontAttributes="Bold"
                            CharacterSpacing="0.15"
                            TextColor="White"
                            HorizontalOptions="Start" 
-                           VerticalOptions="Center"/>
-                </StackLayout>
-                <Frame
+                           VerticalOptions="End"
+                           Margin="10,0,0,0"/>
+                </Grid>
+            </Frame>
+            <Frame x:Name="addFrame"
                    BackgroundColor="#2b2c30"
-                   Padding="10"
-                HeightRequest="40">
-                    <Button BackgroundColor="Transparent"
-                            Text="Security and Account                                             >"
-                            FontAttributes="Bold"
-                            FontSize="16"
-                            CharacterSpacing="0.1"
-                            TextColor="White"
-                            TextTransform="None"    
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"
-                            ImageSource="perm_identity.png">
-                    </Button>
-                </Frame>
-                <Frame
-                   BackgroundColor="#e6c03b"
-                   Padding="10"
-                HeightRequest="40"
-                >
-                    <Button BackgroundColor="#e6c03b"
-                            Text="VIP                                      >"
-                            Clicked="ShowPopUp"
-                            FontAttributes="Bold"
-                            FontSize="16"
-                            CharacterSpacing="4"
-                            TextColor="White"
-                            TextTransform="None"    
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"
-                            ImageSource="attach_money.png">
-
-                    </Button>
-                </Frame>
-                <Frame
-                   BackgroundColor="#2b2c30"
-                   Padding="10"
-                HeightRequest="40">
-                    <Button BackgroundColor="Transparent"
-                            Text="Notification Settings                                               >"
-                            FontAttributes="Bold"
-                            FontSize="16"
-                            CharacterSpacing="0.1"
-                            TextColor="White"
-                            TextTransform="None"    
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"
-                            ImageSource="notification_important.png">
-                    </Button>
-                </Frame>
-                <Frame
-                   BackgroundColor="#2b2c30"
-                   Padding="10"
-                HeightRequest="40">
-                    <Button BackgroundColor="Transparent"
-                            Text="Privacy Settings                                                       >"
-                            FontAttributes="Bold"
-                            FontSize="16"
-                            CharacterSpacing="0.1"
-                            TextColor="White"
-                            TextTransform="None"    
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"
-                            ImageSource="privacy_tip.png">
-                    </Button>
-                </Frame>
-                <Frame
-                   BackgroundColor="#2b2c30"
-                   Padding="10"
-                HeightRequest="40">
-                    <Button BackgroundColor="Transparent"
-                            Text="Languange                                                                >"
-                            FontAttributes="Bold"
-                            FontSize="16"
-                            CharacterSpacing="0.1"
-                            TextColor="White"
-                            TextTransform="None"    
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"
-                            ImageSource="language.png">
-                    </Button>
-                </Frame>
-                <Frame
-                   BackgroundColor="#2b2c30"
-                   Padding="10"
-                HeightRequest="40">
-                    <Button BackgroundColor="Transparent"
-                            Text="Help Center                                                               >"
-                            FontAttributes="Bold"
-                            FontSize="16"
-                            CharacterSpacing="0.1"
-                            TextColor="White"
-                            TextTransform="None"    
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"
-                            ImageSource="help_outline.png">
-                    </Button>
-                </Frame>
-                <Frame
-                   BackgroundColor="#2b2c30"
-                   Padding="10"
-                HeightRequest="40">
-                    <Button BackgroundColor="Transparent"
-                            Text="Application Policy                                                   >"
-                            FontAttributes="Bold"
-                            FontSize="16"
-                            CharacterSpacing="0.1"
-                            TextColor="White"
-                            TextTransform="None"    
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"
-                            ImageSource="policy.png">
-                    </Button>
-                </Frame>
-                <Frame
-                   BackgroundColor="#2b2c30"
-                   Padding="10"
-                HeightRequest="40">
-                    <Button BackgroundColor="Transparent"
-                            Text="Information                                                               >"
-                            FontAttributes="Bold"
-                            FontSize="16"
-                            CharacterSpacing="0.1"
-                            TextColor="White"
-                            TextTransform="None"    
-                            HorizontalOptions="Start"
-                            VerticalOptions="Center"
-                            ImageSource="info.png">
-                    </Button>
-                </Frame>
-                <Button
-                    BorderColor="#a7e12c"
-                    Text="Logout"
-                    BorderWidth="2"
-                    TextColor="#a7e12c"
-                    BackgroundColor="Transparent"
-                    CharacterSpacing="1"
-                    HeightRequest="70"
-                    Margin="0,10,0,30"/>
-            </StackLayout>
-        </ScrollView>
+                   Margin="20,0,20,0"
+                   CornerRadius="10"
+                   HasShadow="False">
+                <Grid Margin="0,-15,0,-15">
+                    <Image Source="search.png" 
+                           HorizontalOptions="Start"/>
+                    <Entry x:Name="searchEntry"
+                           Placeholder="Search by ID"
+                           FontSize="15"
+                           Opacity="1"
+                           TextColor="White"
+                           PlaceholderColor="#84838c"
+                           Margin="30,0,30,0"
+                           TextChanged="OnSearchEntryTextChanged"/>
+                    <ImageButton BackgroundColor="Transparent"
+                                 Source="group_add.png"
+                                 HorizontalOptions="End"
+                                 Clicked="OnAddImageButtonClicked"/>
+                </Grid>
+            </Frame>
+            <Frame x:Name="contentFrame"
+                   Margin="20,0,20,0"
+                   CornerRadius="10"
+                   HasShadow="False"
+                   BackgroundColor="Transparent"
+                   IsVisible="False">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Image Grid.Row="0"
+                           Source="Ellipse8.png"
+                           Margin="0,50,0,10"/>
+                    <Label Grid.Row="1"
+                           Text="User 2"
+                           FontSize="18"
+                           FontAttributes="Bold"
+                           TextColor="White"
+                           HorizontalOptions="Center"/>
+                    <Label x:Name="friendText"
+                           Grid.Row="2"
+                           Text="Belum di daftarkan sebagai teman"
+                           TextColor="White"
+                           HorizontalOptions="Center"/>
+                    <Button x:Name="addButton"
+                            Grid.Row="2"
+                            BackgroundColor="#bcfe2f"
+                            BorderColor="#bcfe2f"
+                            BorderWidth="1"
+                            Text="Add Friend"
+                            FontSize="17"
+                            TextTransform="None"
+                            TextColor="#131517"
+                            Margin="110,30,110,0"
+                            HeightRequest="50"
+                            Clicked="OnAddButtonClicked"/>
+                </Grid>
+            </Frame>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
